--- a/src/app/post-login/components/dialog/dialog.component.html
+++ b/src/app/post-login/components/dialog/dialog.component.html
@@ -1,30 +1,25 @@
-<div class="container">
-  <div class="d-flex flex-row-reverse">
-    <a class="btn cursor-pointer" (click)="dailogRef.close()">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        stroke="#555"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="icon"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-        />
-      </svg>
-    </a>
+<div class="dialog-container">
+  <div class="d-flex flex-row-reverse custom-margin">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="20.279"
+      height="20.279"
+      viewBox="0 0 21 21"
+      fill="none"
+      (click)="dailogRef.close()"
+    >
+      <path
+        d="M10.1395 0C4.53826 0 0 4.53826 0 10.1395C0 15.7408 4.53826 20.2791 10.1395 20.2791C15.7408 20.2791 20.2791 15.7408 20.2791 10.1395C20.2791 4.53826 15.7408 0 10.1395 0ZM10.1395 18.3166C5.62172 18.3166 1.96249 14.6574 1.96249 10.1395C1.96249 5.62172 5.62172 1.96249 10.1395 1.96249C14.6574 1.96249 18.3166 5.62172 18.3166 10.1395C18.3166 14.6574 14.6574 18.3166 10.1395 18.3166ZM14.3017 7.59648L11.7586 10.1395L14.3017 12.6826C14.4938 12.8748 14.4938 13.1855 14.3017 13.3777L13.3777 14.3017C13.1855 14.4938 12.8748 14.4938 12.6826 14.3017L10.1395 11.7586L7.59648 14.3017C7.40432 14.4938 7.09359 14.4938 6.90143 14.3017L5.97742 13.3777C5.78526 13.1855 5.78526 12.8748 5.97742 12.6826L8.52048 10.1395L5.97742 7.59648C5.78526 7.40432 5.78526 7.09359 5.97742 6.90143L6.90143 5.97742C7.09359 5.78526 7.40432 5.78526 7.59648 5.97742L10.1395 8.52048L12.6826 5.97742C12.8748 5.78526 13.1855 5.78526 13.3777 5.97742L14.3017 6.90143C14.4938 7.09359 14.4938 7.40432 14.3017 7.59648Z"
+        fill="#636363"
+      />
+    </svg>
   </div>
 
   <h1 class="dialog-title">Select an account</h1>
-
   <div class="grid-layout-container">
     <kendo-gridlayout
       [cols]="[{ width: 170 }, { width: 170 }, { width: 170 }]"
-      [gap]="{ rows: 0, cols: 22 }"
+      [gap]="{ rows: 24, cols: 22 }"
       class="bg-white text-dark"
     >
       <kendo-gridlayout-item class="card-box">
