--- a/src/app/shared/components/notifications/notifications.component.scss
+++ b/src/app/shared/components/notifications/notifications.component.scss
@@ -46,8 +46,6 @@
 
 ::ng-deep {
     .k-notification-group {
-        // position: unset !important;
-        // margin-left:unset !important;
         flex-flow: column !important;
         display: flex;
         gap: 5px;
@@ -65,9 +63,6 @@
          margin-inline: unset;
         &:first-child{
             margin-top: -33px;
-            // @media (min-width:1920px) {
-            //     margin-top: -40px;
-            // }
         }
     }
 
@@ -85,7 +80,7 @@
     }
 
     .k-notification-info{
-        border: 1px solid #D1D1D1;
+        border: 1px solid #D1D1D1 !important;
         background-color: #EBEBEB;
         color: #000;
 
