--- a/src/app/shared/components/coming-soon/coming-soon.component.html
+++ b/src/app/shared/components/coming-soon/coming-soon.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="txt-title">Lead Routing</h1>
+    <h1 class="txt-title">Title here</h1>
 
     <img src="../../../../assets/images/coming-soon-sign-01.svg">
 </div>
