--- a/src/app/post-login/components/lead-routing/lead-routing.component.html
+++ b/src/app/post-login/components/lead-routing/lead-routing.component.html
@@ -57,6 +57,7 @@
         (gridReady)="onGridReady($event)"
         [sideBar]="sideBar"
         (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
+        (columnResized)="headerHeightSetter()"
       >
       </ag-grid-angular>
       <select
