--- a/src/app/post-login/components/standard-reports/standard-reports.component.html
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.html
@@ -45,6 +45,7 @@
           class="ag-theme-balham"
           [rowSelection]="rowSelection"
           [rowHeight]="76"
+          [headerHeight]="48"
           [pagination]="true"
           [paginateChildRows]="true"
           [paginationPageSize]="paginationPageSize"
