--- a/src/app/post-login/components/standard-reports/standard-reports.component.scss
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.scss
@@ -8,7 +8,7 @@
     margin: 33px auto 42px !important;
   }
 
-  .append-container{
+  .append-container {
     width: 500px;
     margin: 0 auto;
     min-height: 0 !important;
@@ -111,37 +111,6 @@
   color: #2f2f2f;
 }
 
-.vertical-div {
-  gap: 90px;
-  width: 30px;
-  padding: 12px 6px 0 7px;
-  width: 28px;
-  border: 1px solid #dcdcdc;
-
-  & .rotate-div {
-    gap: 10px;
-    color: #2f2f2f;
-    font-family: Helvetica;
-    font-size: 14px;
-    font-weight: 400;
-
-    & span {
-      transform: rotate(90deg);
-    }
-
-    & svg {
-      align-self: center;
-    }
-
-    & select {
-      border: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-    }
-  }
-}
-
 :host ::ng-deep .hide-header-text {
   display: none;
 }
@@ -153,19 +122,11 @@
   position: relative;
 }
 
-:host ::ng-deep .ag-ltr .ag-header-cell::after {
-  width: 0px !important;
-}
-
 :host ::ng-deep .ag-header {
   min-height: 48px !important;
   background-color: #f5f5f5 !important;
   font-family: "Helvetica Neue" !important;
   font-size: 14px !important;
-}
-
-:host ::ng-deep .ag-header-row {
-  top: 7px !important;
 }
 
 :host ::ng-deep .ag-header-cell {
@@ -177,6 +138,7 @@
 :host ::ng-deep .ag-cell-label-container {
   flex-direction: row-reverse !important;
   width: unset;
+  padding: 0 !important;
 }
 
 :host ::ng-deep .ag-group-value {
@@ -270,15 +232,16 @@
 
 //  For RowData
 :host ::ng-deep .newBadge {
-  background-color: #083754;
+  border-radius: 5px;
+  background: #227fed;
+  color: #fff;
   font-family: "Helvetica Neue";
   font-size: 14px;
-  font-weight: 700;
-  background-color: #227fed;
-  padding: 2px 7px;
+  line-height: 16px;
+  min-width: 47px;
+  height: 20px;
+  align-self: center;
   margin-left: 10px;
-  border-radius: 5px;
-  color: #ffffff;
   text-transform: uppercase;
 }
 
@@ -329,11 +292,6 @@
   content: "" !important;
 }
 
-// Hover On Download and Preview
-:host ::ng-deep .iconsColumnDiv {
-  margin-left: -8px;
-}
-
 :host ::ng-deep .preview,
 :host ::ng-deep .download {
   visibility: hidden;
@@ -360,18 +318,14 @@
 
 // border of locked column
 :host ::ng-deep .ag-pinned-left-header,
-:host
-  ::ng-deep
-  .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(
+:host ::ng-deep .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(
     .ag-cell-range-single-cell
   ) {
   border-right: none !important;
 }
 
 :host ::ng-deep .ag-pinned-right-header,
-:host
-  ::ng-deep
-  .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(
+:host ::ng-deep .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(
     .ag-cell-range-single-cell
   ) {
   border-left: none !important;
@@ -380,11 +334,6 @@
 :host ::ng-deep .ag-pinned-right-cols-container {
   margin-right: 0px !important;
 }
-
-// Menu buttton of header
-//  :host ::ng-deep .ag-header-cell-menu-button:not(.ag-header-menu-always-show) {
-//   display: none !important;
-// }
 
 :host ::ng-deep .ag-header-cell-menu-button {
   margin-left: 10px;
@@ -421,24 +370,15 @@
 }
 
 // Pinned right column
-:host ::ng-deep .ag-pinned-right-cols-container {
-  min-width: 125px !important;
-}
-
 :host ::ng-deep {
   .ag-pinned-right-cols-container {
-    min-width: 125px !important;
-    min-width: 140px !important;
+    min-width: 135px !important;
     max-width: unset !important;
-  }
-
-  & .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
-    right: 6px;
   }
 
   .ag-pinned-right-header {
     width: 0 !important  ;
-    min-width: 125px !important;
+    min-width: 135px !important;
   }
 }
 
@@ -446,7 +386,6 @@
 :host ::ng-deep .ag-pinned-left-header,
 :host ::ng-deep .ag-pinned-left-cols-container {
   width: 550px !important;
-  min-width: 550px !important;
 }
 
 :host ::ng-deep .ag-cell-value {
@@ -466,17 +405,17 @@
   border-radius: 6px;
 }
 
-:host ::ng-deep .ag-body-vertical-scroll-container {
-  margin-right: 4px;
-}
-:host
-  ::ng-deep
-  .ag-body-vertical-scroll.ag-scrollbar-invisible.ag-apple-scrollbar {
-  opacity: 1 !important;
-  visibility: visible !important;
+:host ::ng-deep .ag-body-vertical-scroll {
+  right: 5px !important;
+  position: absolute !important;
 }
 
-//
+:host ::ng-deep .ag-body-vertical-scroll.ag-scrollbar-invisible.ag-apple-scrollbar {
+  opacity: 1 !important;
+  visibility: visible !important;
+  position: absolute;
+}
+
 :host ::ng-deep .reportCell {
   color: #2a2a2a;
   width: 150px !important;
@@ -547,7 +486,7 @@
 
 :host ::ng-deep {
   .ag-side-bar {
-    padding: 47px 6px 0px 0px;
+    padding: 48px 6px 0px 0px;
     position: relative;
     color: #2f2f2f;
     font-family: Helvetica Neue;
@@ -593,24 +532,18 @@
 
 :host ::ng-deep {
   .ag-pinned-left-header .ag-header-cell {
-    padding-left: 23px !important;
-  }
-  .ag-pinned-left-header .ag-header-row {
-    margin-left: 35.05px !important;
+    padding-left: 60px !important;
   }
 }
 
 :host ::ng-deep {
-  .ag-horizontal-left-spacer {
-    min-width: 550px !important;
-  }
-
   .ag-horizontal-right-spacer {
-    min-width: 100px !important;
+    min-width: 135px !important;
   }
 
   .ag-center-cols-container {
     margin-right: 0 !important;
+    min-width: 100% !important;
   }
 }
 
