--- a/src/app/post-login/components/lead-routing/lead-routing.component.scss
+++ b/src/app/post-login/components/lead-routing/lead-routing.component.scss
@@ -30,11 +30,6 @@ p {
   font-size: 32px;
   font-weight: 700;
   transition: all 0.4s;
-  // margin-top: 33px;
-
-  // @media (min-width: 1920px) {
-  //   margin-top: 40px ;
-  // }
 }
 
 .search-section {
@@ -132,9 +127,6 @@ p {
 
 :host ::ng-deep .league-table {
   width: 100%;
-  & .ag-ltr .ag-header-cell::after {
-    display: none;
-  }
 
   & .ag-ltr .ag-cell {
     display: flex;
@@ -143,12 +135,6 @@ p {
     font-family: Helvetica;
     font-size: 14px;
     font-weight: 400;
-  }
-
-  & .ag-pinned-left-cols-container {
-    width: 20% !important;
-    min-width: 300px !important;
-    max-width: unset !important;
   }
 
   & .ag-pinned-left-cols-container .ag-cell {
@@ -259,7 +245,11 @@ p {
 // STICKY COLUMS AND ROW //
 :host ::ng-deep .ag-pinned-left-header {
   width: 20% !important;
-  min-width: 300px !important;
+  max-width: unset !important;
+}
+
+:host ::ng-deep .ag-pinned-left-cols-container {
+  width: 20% !important;
   max-width: unset !important;
 }
 
@@ -287,23 +277,24 @@ p {
 
 :host ::ng-deep .league-table .ag-center-cols-container {
   margin-right: 0 !important;
+  min-width: 100% !important;
 }
 
 // Pined right column
 :host ::ng-deep {
   .ag-pinned-right-cols-container {
     width: 10% !important;
-    min-width: 150px !important;
+    min-width: 140px !important;
     max-width: unset !important;
-  }
-
-  & .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
-    right: 6px;
   }
 
   .ag-pinned-right-header {
     width: 0 !important  ;
-    min-width: 145px !important;
+    min-width: 140px !important;
+  }
+
+  .ag-pinned-right-cols-container .ag-row .ag-cell-value{
+    margin-bottom: -15px !important;
   }
 }
 
@@ -395,15 +386,16 @@ select:focus {
     border-radius: 6px;
   }
 
-  .ag-body-vertical-scroll-container {
-    margin-right: 4px;
+  .ag-body-vertical-scroll{
+    right: 5px;
+    position: absolute !important;
   }
 }
 
 // FLY OUT PANEL//
 :host ::ng-deep {
   .ag-side-bar {
-    padding: 48px 6px 0px 0px;
+    padding: 0 6px 0px 0px;
     position: relative;
     color: #2f2f2f;
     font-family: Helvetica Neue;
@@ -424,7 +416,7 @@ select:focus {
   }
   .ag-side-buttons {
     padding-top: 0;
-    margin-top: -35px;
+    margin-top: 12px;
     margin-left: 7px;
   }
 
@@ -469,13 +461,8 @@ select:focus {
 
 // HORIZONATL SCROLLBAR //
 :host ::ng-deep {
-  .ag-horizontal-left-spacer {
-    min-width: 300px !important;
-  }
-
   .ag-horizontal-right-spacer {
-    min-width: 100px !important;
-    width: 130px !important;
+    min-width: 140px !important;
   }
 
   .ag-center-cols-container {
@@ -538,7 +525,7 @@ select:focus {
   background-color: #f7f7f7;
   border-right: 1px solid rgb(189, 195, 199) !important;
   height: 48px;
-  width: 88.5%;
+  width: 86%;
   border: 0;
   font-size: 14px;
   color: #0a4569;
@@ -553,7 +540,6 @@ select:focus {
 
 :host ::ng-deep .ag-tool-panel-wrapper {
   border-top: 1px solid rgb(189, 195, 199);
-  margin-right: -7px;
 }
 
 :host ::ng-deep .ag-column-panel-column-select {
@@ -571,10 +557,6 @@ select:focus {
 
 .close-btn {
   margin-left: auto;
-}
-
-:host ::ng-deep .nameField {
-  width: min-content !important;
 }
 
 .clear-section-section {
@@ -618,6 +600,7 @@ div:has(> .actionsField) > div {
 :host ::ng-deep .ag-cell-label-container {
   flex-direction: row-reverse !important;
   width: unset;
+  padding: 0 !important;
 }
 
 :host ::ng-deep .ag-header-cell-menu-button {
@@ -635,7 +618,6 @@ div:has(> .actionsField) > div {
   font-weight: 400;
   line-height: 32px;
   height: 19px;
-  margin-bottom: -15px;
   display: flex;
   justify-content: center;
   align-items: center;
